# spdc-coincidence-analysis

./: .gitignore  LICENSE  README.md  _old_mkdocs.yml  mkdocs.yml  pyproject.toml  refs.bib  zensical.toml
.github/workflows/: docs.yml
LaTeX/: main.tex  sources.bib
Notebook/: tmsv_hwp.ipynb
docs/: index.md  index_old.md
docs/assets/plots/: visibility_vs_etaH_plot.html
docs/concepts_and_foundations/: coherent_states.md  conjugation_operators.md  determinant_relations.md  matrix_properties.md  operator_relations.md  overview.md  povm_number_operator.md
docs/css/: home.css
docs/dashboard/: dashboard.md
docs/js/: coincidence_plot.js  home.js  home_old.js
docs/stylesheets/: coincidence_plots.css  extra.css
docs/theory/: cc_derivation.md  experimental_setup.md  inclusion_loss.md  povm.md  povm_bucket_detectors.md  simplified_example.md  tmsv.md
scripts/: make_cc_plot.py  make_visibility_plot.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/assets/plots/: coincidence_plot.html
site/concepts_and_foundations/coherent_states/: index.html
site/concepts_and_foundations/conjugation_operators/: index.html
site/concepts_and_foundations/determinant_relations/: index.html
site/concepts_and_foundations/matrix_properties/: index.html
site/concepts_and_foundations/operator_relations/: index.html
site/concepts_and_foundations/overview/: index.html
site/js/: home.js  mathjax-config.js  mathjax.js
site/stylesheets/: extra.css
src/spdc_coincidence_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+7 files in other folders)
