[project]
name = "spdc-coincidence-analysis"
version = "0.1.0"
description = "Analytical and numerical tools for SPDC coincidence calculations"
authors = [{ name = "Nico Sieber" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "ipykernel",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
]

dev = [
    "ipykernel",
    "black",
    "ruff",
]

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"